--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -1,4 +1,4 @@
-<div class="container-content--outer" ng-if="isFeatureActive('tasks')" list-container>
+<div class="container-content--outer" list-container>
   <section class="container-content" list="getTasksArray('context', {id: context && context.trans.uuid})">
     <div class="group-mixed heading vertically-centered">
       <div class="group-mixed--middle">
