--- a/frontend/core/src/main/webapp/static/app/lists/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listTasks.html
@@ -1,4 +1,5 @@
-<div class="container-content--outer" ng-if="isFeatureActive('list')" list-container drawer-handle="left">
+<div class="container-content--outer" list-container drawer-handle="left"
+  drawer-handle-register-activate="registerFeatureActivateCallback(activate, 'list', 'listTasks')">
   <section class="container-content" list="getTasksArray('list', {uuid: list.trans.uuid})">
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
