--- a/frontend/core/src/main/webapp/static/app/user/userDetails.html
+++ b/frontend/core/src/main/webapp/static/app/user/userDetails.html
@@ -52,6 +52,7 @@
         <span class="text-link">hide footer navigation on mobile devices</span>
       </div>
     </div>
+
     <div class="group-mixed with-checkbox">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="settings.disableVibration" ng-true-value="true"
@@ -61,6 +62,21 @@
         <span class="text-link">disable vibration on complete and uncomplete</span>
       </div>
     </div>
+
+    <p ng-if="agendaCalendarSettingVisible" class="row">
+      <span class="text-heading-primary">this device</span></br>
+    </p>
+    <div ng-if="agendaCalendarSettingVisible" class="group-mixed">
+      <a href class="group-mixed--middle link" swiper-click="openEditor('user', undefined, 'agendaCalendar')">
+        <span class="text-link">agenda calendar</span>
+      </a>
+      <div class="group-mixed--right">
+        <a href ng-click="openEditor('user', undefined, 'agendaCalendar')">
+          <span class="text-navigation-forward large"></span>
+        </a>
+      </div>
+    </div>
+
   </section>
   <footer class="container-content--after">
     <nav role="navigation" class="swiper-no-swiping group-symmetrical">
