--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -341,6 +341,8 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
+
+            <div ng-repeat="eventInstance in getEventInstances(daySlides[2].info)" ng-bind="eventInstance | json"></div>
           </div>
         </div>
 
@@ -362,6 +364,8 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
+
+            <div ng-repeat="eventInstance in getEventInstances(daySlides[0].info)" ng-bind="eventInstance | json"></div>
           </div>
         </div>
 
@@ -383,6 +387,8 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
+
+            <div ng-repeat="eventInstance in getEventInstances(daySlides[1].info)" ng-bind="eventInstance | json"></div>
           </div>
         </div>
 
@@ -404,6 +410,8 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
+
+            <div ng-repeat="eventInstance in getEventInstances(daySlides[2].info)" ng-bind="eventInstance | json"></div>
           </div>
         </div>
 
@@ -425,6 +433,8 @@
               list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
+
+            <div ng-repeat="eventInstance in getEventInstances(daySlides[0].info)" ng-bind="eventInstance | json"></div>
           </div>
         </div>
 
