Handle agenda and calendars visibility state change. With debug log.

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -342,7 +342,7 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
               ng-click="openCalendar(daySlides[2].info)">
               <span ng-if="agendaEvents && agendaEvents.length">agenda</span>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[2].info) as agendaEvents">
@@ -377,7 +377,7 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
               ng-click="openCalendar(daySlides[0].info)">
               <span ng-if="agendaEvents && agendaEvents.length">agenda</span>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[0].info) as agendaEvents">
@@ -412,7 +412,7 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
               ng-click="openCalendar(daySlides[1].info)">
               <span ng-if="agendaEvents && agendaEvents.length">agenda</span>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[1].info) as agendaEvents">
@@ -447,7 +447,7 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
               ng-click="openCalendar(daySlides[2].info)">
               <span ng-if="agendaEvents && agendaEvents.length">agenda</span>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[2].info) as agendaEvents">
@@ -482,7 +482,7 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
               ng-click="openCalendar(daySlides[0].info)">
               <span ng-if="agendaEvents && agendaEvents.length">agenda</span>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[0].info) as agendaEvents">
