Print calendar name of the event. Fixed a bug when checking does calendar plugin exist.

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -350,6 +350,7 @@
                 <span style="white-space:pre-wrap; line-height: normal;"
                   ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                 </span>
+                <span ng-bind="agendaEvent.calendarName"></span>
                 <span ng-if="agendaEvent.eventLocation" ng-bind="agendaEvent.eventLocation"></span>
                 <span ng-if="agendaEvent.rrule" class="icon-sort"></span>
               </div>
@@ -385,6 +386,7 @@
                 <span style="white-space:pre-wrap; line-height: normal;"
                   ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                 </span>
+                <span ng-bind="agendaEvent.calendarName"></span>
                 <span ng-if="agendaEvent.eventLocation" ng-bind="agendaEvent.eventLocation"></span>
                 <span ng-if="agendaEvent.rrule" class="icon-sort"></span>
               </div>
@@ -420,6 +422,7 @@
                 <span style="white-space:pre-wrap; line-height: normal;"
                   ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                 </span>
+                <span ng-bind="agendaEvent.calendarName"></span>
                 <span ng-if="agendaEvent.eventLocation" ng-bind="agendaEvent.eventLocation"></span>
                 <span ng-if="agendaEvent.rrule" class="icon-sort"></span>
               </div>
@@ -455,6 +458,7 @@
                 <span style="white-space:pre-wrap; line-height: normal;"
                   ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                 </span>
+                <span ng-bind="agendaEvent.calendarName"></span>
                 <span ng-if="agendaEvent.eventLocation" ng-bind="agendaEvent.eventLocation"></span>
                 <span ng-if="agendaEvent.rrule" class="icon-sort"></span>
               </div>
@@ -490,6 +494,7 @@
                 <span style="white-space:pre-wrap; line-height: normal;"
                   ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                 </span>
+                <span ng-bind="agendaEvent.calendarName"></span>
                 <span ng-if="agendaEvent.eventLocation" ng-bind="agendaEvent.eventLocation"></span>
                 <span ng-if="agendaEvent.rrule" class="icon-sort"></span>
               </div>
